fix(cell): the overflow style is unexpected

--- a/src/cell/cell.less
+++ b/src/cell/cell.less
@@ -35,6 +35,7 @@
   line-height: @cell-line-height;
   height: @cell-height;
   background-color: @cell-bg-color;
+  overflow: hidden;
 
   &::after {
     .hairline-bottom(@cell-border-color, @cell-border-width);
